--- a/src/scss/components/_sort.scss
+++ b/src/scss/components/_sort.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import "variables";
 
 .sort {
   position: relative;
@@ -8,6 +8,11 @@
 
     svg {
       margin-right: 8px;
+      transition: 0.3s ease-in-out;
+
+      &.rotated {
+        transform: rotate(180deg);
+      }
     }
 
     b {
