--- a/src/scss/components/_sort.scss
+++ b/src/scss/components/_sort.scss
@@ -1,6 +1,7 @@
-@import "variables";
+@import 'variables';
 
 .sort {
+  margin-left: 20px;
   position: relative;
   &__label {
     display: flex;
@@ -8,10 +9,10 @@
 
     svg {
       margin-right: 8px;
-      transition: 0.3s ease-in-out;
+      transform: rotate(180deg);
 
       &.rotated {
-        transform: rotate(180deg);
+        transform: rotate(0);
       }
     }
 
